@@ -9,6 +9,7 @@ Thu Apr 29 16:20:00 2010 Damien Churchill <damoxc@gmail.com>
 		+ feature: add support for setting the application name
 		+ bugfix:  accept more than just the decimal.Decimal type for
 		           money and decimal parameters.
+		+ bugfix:  fix raising exceptions from convert_python_value()
 	* pymssql:
 		+ feature: add initial support for callproc()
 		+ feature: add support for setting the application name
